# harikoff

./: .gitignore  Makefile.am  configure  configure.ac
core/: Makefile.am  Makefile.in  main.cpp  mind.cpp  painfulQuale.cpp
core/include/: association.h  attentionGrabber.h  attentionTrigger.h  bodyCoords.h  chronomenon.h  concept.h  existent.h  goal.h  mentalEntity.h  mind.h  nonNeutralQualia.h  quale.h  qualeBundle.h  scene.h  stupefier.h  subconscious.h  thought.h  thoughtContentSource.h  valueJdgmnt.h
core/include/body/: bodyMap.h  bodyMessage.h  bodyPart.h  limb.h
core/include/sensors/: interoceptor.h
